fix userId
